375
It still doesn't work for me. Strange.
```scala
$$ scalac -version

Scala compiler version 2.7.1.RC1 -- (c) 2002-2008 LAMP/EPFL

$$ scalac 931.scala 

931.scala:6: error: value b is not a member of package <root>
val x = new _root_.b.B
                   ^
one error found

$$ cat 931.scala

package b {
class B
}
package a.b {
class A {
val x = new _root_.b.B
}
}

$$ 
```
